--- a/templates/index.html
+++ b/templates/index.html
@@ -64,19 +64,19 @@
                     <h2 class="section-heading">About Me</h2>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4">
+            <div class="row" id="aboutparent">
+                <!-- <div class="col-md-4"> -->
                     <div class="about-pic">
                         <h3 class="text-center">See my <a href="/resume">resume</a>!</h3>
                         <img src="static/img/facebookprof.jpg" id="prof_pic" class="img-responsive" alt="">
                     </div>
-                </div>
-                <div class="col-lg-8">
+                <!-- </div> -->
+                <!-- <div class="col-md-8"> -->
                     <div class="about-bio">
                         <p id="mybio">My name is Jesse Bartola and I am currently an undergraduate student studying Computer Science at the <a href="http://www.umass.edu/">University of Massachusetts, Amherst</a>. Planning on graduating in 2019, I would like to become a software engineer. My passion for programming began at a young age and my focus has never deviated. I have developed many web and mobile interfaces including instant-messaging chat systems, automated texting services and mobile iPhone applications. 
                         </p>
                     </div>
-                </div>
+                <!-- </div> -->
             </div>
         </div>
     </section>
@@ -188,12 +188,10 @@
                     
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-4">
-                    <div id="pieChart" class="chart">
-                    </div>
+            <div class="row" id="pieparent">
+                <div id="pieChart" class="chart">
                 </div>
-                <div id="piediv" class="col-sm-8">
+                <div id="piediv">
                     <p id="pietext" class="large text-muted">An understanding of many different languages has helped me throughout the years in creating projects with different applications and uses. </p>
                     <p id="web" style="display:none;" class="large text-muted">Web development is my most proficient area of programming which includes anything from jQuery to Sass. This type of programming is truly the specific area of computer science that I am most passionate about. </p>
                     <p id="python" style="display:none;" class="large text-muted">My experience with the language of Python has enabled me to create many websites and applications using Flask framework as well as standalone scripts to do my bidding. It is a loosely-typed language with a clear, unobstructed syntax which makes it easy to write robust, scalable application scripts.</p>
