Visitor logging db

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,7 @@
                 <!-- <div class="col-md-4"> -->
                     <div class="about-pic">
                         <h3 class="text-center">See my <a href="/resume">resume</a>!</h3>
+                        <!-- <h3 class="text-center">See my <a href="http://github.com/jrbartola">Github!</a><h3> -->
                         <img src="static/img/facebookprof.jpg" id="prof_pic" class="img-responsive" alt="">
                     </div>
                 <!-- </div> -->
