Scopium picture size affecting the carousel

--- a/static/less/agency.less
+++ b/static/less/agency.less
@@ -291,6 +291,9 @@ section {
 
 .about-skills {
 	div {
+		p {
+			text-align: justify;
+		}
 		&:hover {
 			cursor: pointer;
 			border-radius: 5px;
