--- a/templates/index.html
+++ b/templates/index.html
@@ -92,31 +92,41 @@
                 </div>
             </div>
             <div class="row text-center about-skills">
-                <div id="skill1" class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Learning</h4>
-                    <p class="text-muted">The importance of an ambition for education, a will to learn, and a drive to tackle new challenges are three pivotal assets that every web developer should carry. Aside from mandatory classes, getting ahead of the curve with self-taught methodologies has tremendously helped me achieve a greater understanding of software and programming. 
-
-                        <!--I can't stress how imporant it is these days to have an ambition for education. I'm always willing to learn new things on my own time and will go out of my way to make sure I am up to date with the latest and most elegant technology.--></p>
+                <div id="skill1" class="col-sm-4 skill">
+                    <div class="skill-icon">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="service-heading">Learning</h4>
+                    </div>  
+                    <div class="skill-desc">
+                        <p class="text-muted">The importance of an ambition for education, a will to learn, and a drive to tackle new challenges are three pivotal assets that every web developer should carry. Aside from mandatory classes, getting ahead of the curve with self-taught methodologies has tremendously helped me achieve a greater understanding of software and programming.</p>
+                    </div>
                 </div>
-                <div id="skill2" class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Technology</h4>
-                    <p class="text-muted">Technology spans many facets which include calculators, computers and iPhones. An aptitude for all of these devices is an essential part of being succesful when it comes to programming. While always trying to find the most efficient way to tackle projects, I enjoy the challenges that come along with pushing myself past my limits.</p>
+                <div id="skill2" class="col-sm-4 skill">
+                    <div class="skill-icon">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="service-heading">Technology</h4>
+                    </div>
+                    <div class="skill-desc">
+                        <p class="text-muted">Technology spans many facets which include calculators, computers and iPhones. An aptitude for all of these devices is an essential part of being succesful when it comes to programming. While always trying to find the most efficient way to tackle projects, I enjoy the challenges that come along with pushing myself past my limits.</p>
+                    </div>
                 </div>
-                <div id="skill3" class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-gears fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Active Engagement</h4>
-                    <p class="text-muted">While the process of learning a new language or adjusting previous thought processes may seem tedious, the application of such knowledge is crucial. While a thorough education in computer science is important, hands-on activities solidify your skill-set which is why I am always involved in multiple outside projects of my own.</p>
+                <div id="skill3" class="col-sm-4 skill">
+                    <div class="skill-icon">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-gears fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="service-heading">Active Engagement</h4>
+                    </div>
+                    <div class="skill-desc">
+                        <p class="text-muted">While the process of learning a new language or adjusting previous thought processes may seem tedious, the application of such knowledge is crucial. While a thorough education in computer science is important, hands-on activities solidify your skill-set which is why I am always involved in multiple outside projects of my own.</p>
+                    </div>
                 </div>
             </div>
         </div>
