--- a/static/less/mixins.less
+++ b/static/less/mixins.less
@@ -4,7 +4,7 @@
 	color: @color;
 	background-color: @background;
 	border-color: @border;
-
+	transition: all 0.3s ease-in;
 	&:hover,
 	&:focus,
 	&:active,
