--- a/templates/index.html
+++ b/templates/index.html
@@ -317,7 +317,7 @@
                             <ul class="list-inline">
                                 <li>Date: June 2015</li>
                             </ul>
-                            <button type="button" class="btn btn-xl" data-dismiss="modal"><i class="fa fa-times"></i> Okay, Cool!</button>
+                            <button type="button" class="btn btn-xl" data-dismiss="modal">Back <i class="fa fa-arrow-right"></i></button>
                         </div>
                     </div>
                 </div>
@@ -342,7 +342,7 @@
                             <p class="item-intro text-muted">Portable chat messaging</p>
                             <img class="img-responsive img-centered" src="static/img/basicchat.png" alt="">
                             <p>Basic Chat is a small project which implements both Node.js and MongoDB. It allows the user to send instant messages to contacts that are also logged in. The site also tracks analytics for each user which can be viewed on their profile. Check out the project on <a href="https://github.com/jrbartola/BasicChat">Github</a>! More features to be announced.</p>
-                            <button type="button" class="btn btn-xl" data-dismiss="modal"><i class="fa fa-times"></i> Okay, Cool!</button>
+                            <button type="button" class="btn btn-xl" data-dismiss="modal">Back <i class="fa fa-arrow-right"></i></button>
                         </div>
                     </div>
                 </div>
@@ -373,7 +373,7 @@
                                 <img class="img-responsive img-centered" src="static/img/scopium1.jpg">
                             </div>
                             <p>Scopium is a project that a couple of friends and I created for Hack Umass. It makes use of little mechanical Arduino sensors which transmit data to an iOS Appplication, helping monitor signs of multiple sclerosis for patients in need. Studies show that patients more aware of their symptoms are more comfortable than patients unaware of sympotoms they may be experiencing. <strong>See more:</strong> <a href="http://devpost.com/software/scopium">Devpost</a>.</p>
-                            <button type="button" class="btn btn-xl" data-dismiss="modal"><i class="fa fa-times"></i> Okay, Cool!</button>
+                            <button type="button" class="btn btn-xl" data-dismiss="modal">Back <i class="fa fa-arrow-right"></i></button>
                         </div>
                     </div>
                 </div>
