--- a/static/less/agency.less
+++ b/static/less/agency.less
@@ -725,24 +725,45 @@ body {
 
 // Mailbox
 
-#inbox {
+.inbox {
 	border-left: 15px solid @brand-secondary;
 	border-right: 15px solid @brand-secondary;
-	height: 600px;
-	overflow-y: scroll;
 
 	& .row {
 		padding-top: 15px;
 	}
+}
+
+.flex {
+	display: flex;
+}
+
+.table-holder {
+	overflow-y: auto;
+	padding: 20px 20px;
+	height: 500px;
 
 	table {
+	/*
+		tbody {
+			height: 500px;
+			overflow-y: auto;
+		}
+	*/
 		tr {
-			&:hover {
-				cursor: pointer;
-				background-color: darken(@brand-background, 5%);
+			th {
+				&:hover {
+					cursor: pointer;
+					background-color: darken(@brand-background, 5%);
+				}
 			}
+			
 		}
 	}
+}
+
+.caret-upside {
+	transform: rotate(180deg);
 }
 
 #removemsg {
