Wave Calendar Modal

--- a/templates/index.html
+++ b/templates/index.html
@@ -184,6 +184,20 @@
                         <p class="text-muted">Award-Winning iOS Application</p>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="static/img/wave_calendar_squished.jpg" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Wave Calendar</h4>
+                        <p class="text-muted">Party Social Networking</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -373,6 +387,35 @@
                                 <img class="img-responsive img-centered" src="static/img/scopium1.jpg">
                             </div>
                             <p>Scopium is a project that a couple of friends and I created for Hack Umass. It makes use of little mechanical Arduino sensors which transmit data to an iOS Appplication, helping monitor signs of multiple sclerosis for patients in need. Studies show that patients more aware of their symptoms are more comfortable than patients unaware of sympotoms they may be experiencing. <strong>See more:</strong> <a href="http://devpost.com/software/scopium">Devpost</a>.</p>
+                            <button type="button" class="btn btn-xl" data-dismiss="modal">Back <i class="fa fa-arrow-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 3 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Wave Calendar</h2>
+                            <p class="item-intro text-muted">Party scheduling social network</p>
+                            <div class="col-md-12">
+                                <img class="img-responsive img-centered" src="static/img/wave_calendar.jpg">
+                            </div>
+                            
+                            <p>If you've ever been bored and wondered what events are going on around your area, you aren't alone. Wave Calendar provides an easy way for people to find out where the parties (waves) are around you! Once you've signed up, you can either search for parties around your area, or create your own. This web application is built with MEAN stack. Check out the project on <a href="https://github.com/jrbartola/WaveCalendar">Github</a>!</p>
                             <button type="button" class="btn btn-xl" data-dismiss="modal">Back <i class="fa fa-arrow-right"></i></button>
                         </div>
                     </div>
