--- a/static/less/agency.less
+++ b/static/less/agency.less
@@ -780,3 +780,59 @@ body {
 		background-color: darkred;
 	}
 }
+
+
+
+// Tutoring
+
+
+.tab-group {
+	margin: 0 auto;
+	max-width: 40em;
+	width: 100%;
+} 
+
+.tab {
+	position: relative;
+	width: 100%;
+}
+
+.tab input {
+	transform: translate(15px, 15px);
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: -999;
+}
+
+.tab label {
+	background: @brand-secondary;
+	border-radius: 2px;
+	color: #fff;
+	display: block;
+	font-weight: bold;
+	line-height: 3;
+	padding-left: 0.5em;
+	margin-bottom: 0.5em;
+	transition: letter-spacing 0.55s;
+}
+
+.tab input:focus + label,
+.tab label:hover {
+	background: @brand-primary;
+	letter-spacing: 1px;
+}
+
+.tab-content {
+	max-height: 0;
+	overflow: hidden;
+	transition: all 0.35s;
+}
+
+.tab-content p {
+	margin: 1em 0;
+}
+
+.tab input:checked ~ .tab-content {
+	max-height: 9em;
+}
