Tutoring/pickmeup.js

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,7 +25,8 @@
     <!-- Slick CSS -->
     <link href="static/css/slick.css" rel="stylesheet">
     <link href="static/css/slick-theme.css" rel="stylesheet">
-    
+    <!-- PickMeUp CSS -->
+    <link href="static/css/pickmeup.css" rel="stylesheet">
     <!-- SweetAlert CSS -->
     <link href="static/css/sweetalert.css" rel="stylesheet">
 
