--- a/templates/tutoring.html
+++ b/templates/tutoring.html
@@ -124,8 +124,9 @@
     <!-- SweetAlert Plugin -->
     <script src="static/js/sweetalert.min.js"></script>
 
-    <!-- Mailbox JavaScript -->
-<!-- <script src="static/js/mailbox.js"></script> -->
+    <!-- PickMeUp JavaScript -->
+    <script src="static/js/jquery.pickmeup.min.js"></script>
+    <script src="static/js/jquery.pickmeup.twitter-bootstrap.min.js"></script>
 
 
 </body>
