--- a/static/less/agency.less
+++ b/static/less/agency.less
@@ -146,7 +146,7 @@ h1, h2, h3, h4, h5, h6 {
 			border-radius: 3px;
 		}
     }
-    .navbar-default.navbar-shrink {
+    .navbar-default.navbar-shrink { 
     	background-color: @brand-secondary;
         padding: 10px 0;
 		.navbar-brand {
@@ -157,9 +157,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-	//background: linear-gradient(to top, @brand-background, transparent 30%),
-	//			url('../img/header-bg.jpg') no-repeat center;
-	background: url('../img/header-bg.jpg') no-repeat center; 
+	background: url('../img/header-bg.jpg') no-repeat center;
+	background-attachment: fixed;
 	.background-cover;
 	text-align: center;
 	color: white;
@@ -527,6 +526,7 @@ section#contact {
 	background-image: url('../img/map-image.png');
 	background-position: center;
 	background-repeat: no-repeat;
+	background-attachment: fixed;
 	.section-heading {
 		color: white;
 	}
