--- a/static/less/agency.less
+++ b/static/less/agency.less
@@ -156,9 +156,10 @@ h1, h2, h3, h4, h5, h6 {
 	}
 }
 
+
 header {
 	background: url('../img/header-bg.jpg') no-repeat center;
-	background-attachment: fixed;
+	
 	.background-cover;
 	text-align: center;
 	color: white;
@@ -184,6 +185,7 @@ header {
 
 @media(min-width:768px) {
 	header {
+		background-attachment: fixed;
 		.intro-text {
 			padding-top: 300px;
 			padding-bottom: 200px;
@@ -526,7 +528,7 @@ section#contact {
 	background-image: url('../img/map-image.png');
 	background-position: center;
 	background-repeat: no-repeat;
-	background-attachment: fixed;
+	
 	.section-heading {
 		color: white;
 	}
@@ -564,13 +566,20 @@ section#contact {
 	   color: @placeholder-text;
 	}
 	:-ms-input-placeholder {  
-	   .heading-font;
+	   .heading-font; 
 	   font-weight: 700;
 	   color: @placeholder-text;
 	}
 	.text-danger {
 		color: @brand-danger;
 	}
+}
+
+@media(min-width:768px) {
+	section#contact {
+		background-attachment: fixed;
+	}
+
 }
 
 // Footer
