--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,7 +31,7 @@
     <link href="static/css/sweetalert.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="static/css/agency.css" rel="stylesheet">
+    <link href="static/css/bartola.css" rel="stylesheet">
 
 
 
