--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-heading">Hi, I'm Jesse</div>
-                <a href="#about" class="page-scroll btn btn-xl">Tell me more!</a>
+                <!-- <a href="#about" class="page-scroll btn btn-xl">Tell me more!</a> -->
             </div>
         </div>
     </header>
