Updated category descriptions

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
                 <!-- </div> -->
                 <!-- <div class="col-md-8"> -->
                     <div class="about-bio">
-                        <p id="mybio">My name is Jesse Bartola and I am currently an undergraduate student studying Computer Science at the <a href="http://www.umass.edu/">University of Massachusetts, Amherst</a>. Planning on graduating in 2019, I would like to become a software engineer. My passion for programming began at a young age and my focus has never deviated. I have developed many web and mobile interfaces including instant-messaging chat systems, automated texting services and mobile iPhone applications. 
+                        <p id="mybio">My name is Jesse Bartola and I am currently an undergraduate student studying Computer Science at the <a href="http://www.umass.edu/">University of Massachusetts, Amherst</a>. Planning on graduating in 2019, I would like to become a software engineer. My passion for technology began at a young age and has continued to expand ever since. I have developed several web and mobile interfaces including instant-messaging chat systems, automated texting services and mobile iPhone applications. 
                         </p>
                     </div>
                 <!-- </div> -->
@@ -100,7 +100,7 @@
                         <h4 class="service-heading">Learning</h4>
                     </div>  
                     <div class="skill-desc">
-                        <p class="text-muted">The importance of an ambition for education, a will to learn, and a drive to tackle new challenges are three pivotal assets that every web developer should carry. Aside from mandatory classes, getting ahead of the curve with self-taught methodologies has tremendously helped me achieve a greater understanding of software and programming.</p>
+                        <p class="text-muted">An ambition for education, a will to learn, and a drive to tackle new challenges are three pivotal assets that should be harbored by every software engineer. Aside from mandatory coursework, getting ahead of the curve through self-taught methodologies has helped me tremendously in achieving a greater understanding of computer science and programming.</p>
                     </div>
                 </div>
                 <div id="skill2" class="col-sm-4 skill">
@@ -112,7 +112,7 @@
                         <h4 class="service-heading">Technology</h4>
                     </div>
                     <div class="skill-desc">
-                        <p class="text-muted">Technology spans many facets which include calculators, computers and iPhones. An aptitude for all of these devices is an essential part of being succesful when it comes to programming. While always trying to find the most efficient way to tackle projects, I enjoy the challenges that come along with pushing myself past my limits.</p>
+                        <p class="text-muted">Technology spans all facets of modern day society. From computers to iPhones and beyond, an aptitude for understanding these devices at a fundamental level is an essential part of being a succesful computer scientist. While always trying to find the most efficient way to tackle my projects, I enjoy the challenge and learning experience that come with pushing myself out of my comfort zone.</p>
                     </div>
                 </div>
                 <div id="skill3" class="col-sm-4 skill">
@@ -124,7 +124,7 @@
                         <h4 class="service-heading">Active Engagement</h4>
                     </div>
                     <div class="skill-desc">
-                        <p class="text-muted">While the process of learning a new language or adjusting previous thought processes may seem tedious, the application of such knowledge is crucial. While a thorough education in computer science is important, hands-on activities solidify your skill-set which is why I am always involved in multiple outside projects of my own.</p>
+                        <p class="text-muted">Learning a difficult concept or adjusting a previous mentality to new industry standards may seem tedious and daunting. As challenging as it is, the light at the end of the tunnel is enough to spark my drive to get there. While a thorough education in computer science is important, hands-on activities solidify your skill-set which is why I am always involved in multiple outside projects of my own.</p>
                     </div>
                 </div>
             </div>
