--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}Jesse Bartola{% endblock %}
 
 {% block body %}
-<body id="page-top" class="index">
+<body id="page-top" ng-app="website" class="index">
 
 
     <!-- Navigation -->
